--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 Last Worked On:
-Working Freddy Faznut in animatronicAI - adjusting kill -> night_1
+Working Foxy attack animation and death -> night1 Implement death
 
 Paused:
 Kitchen sounds. (Set baselow to low volume when camera lowered.) (Tracks don't loop)
@@ -7,6 +7,13 @@ Door animation is scuffed (Right door head keeps disappearing.)
 Animatronic AI is set high for testing purposes.
 
 Todo:
+1. Foxy
+2. Power Out
+3. Night end
+	
+	
+	
+Old:
 1. Camera panel button is touchy.
 2. Enemy AI
 3. Foxy animations
