--- a/todo.txt
+++ b/todo.txt
@@ -7,14 +7,23 @@ Door animation is scuffed (Right door head keeps disappearing.)
 Animatronic AI is set high for testing purposes.
 
 Todo:
-1. DONE- Foxy
-2. Power Out
 3. Night end
+4. Change monitor button -> Use Scott solution (button disappears when clicked, reappears after leaving zone)
+5. Main menu  continue game doesn't work after dying?
 	
-	
+Done:
+Foxy
+Bonnie
+Chica
+Freddy
+Kitchen
+Camera Controls
+Room Textures and Layout
+Monitor Controls
+Power Out (bit rough)
 	
 Old:
-1. Camera panel button is touchy.
+1. Camera panel button is touchy. 
 2. Enemy AI
 3. Foxy animations
 4. Kitchen SFX
