--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,6 @@ Door animation is scuffed (Right door head keeps disappearing.)
 Animatronic AI is set high for testing purposes.
 
 Todo:
-3. Night end
 4. Change monitor button -> Use Scott solution (button disappears when clicked, reappears after leaving zone)
 5. Main menu  continue game doesn't work after dying?
 	
@@ -21,6 +20,7 @@ Camera Controls
 Room Textures and Layout
 Monitor Controls
 Power Out (bit rough)
+Night end
 	
 Old:
 1. Camera panel button is touchy. 
