--- a/todo.txt
+++ b/todo.txt
@@ -1,19 +1,24 @@
 Last Worked On:
-Broad changes to audio systems -see FanAmbient and Audio tab
+Changed power_out -> night1
 
-Paused:
-Kitchen sounds. (Set baselow to low volume when camera lowered.) (Tracks don't loop)
-Door animation is scuffed (Right door head keeps disappearing.)
-Animatronic AI is set high for testing purposes.
 
-Todo:
-6. Audio
-7. Camera breaks on move + anims
-8. Visual overhaul
-9. Golden Freddy
+TODO:
+8. Golden Freddy
+	HE appears
+	Hallucinations
+	Alternate screen images
+9. Visual overhaul <- Office
 10. Window resizing?
+x. Footsteps scale with proximity
+x. Redo door head sprites so they dont disappear
+x. Phone calls
+x. Kitchen camera fix
+x. Lights turn off when camera opens
+x. How much power is too much? (Max usage is 6?)
 	
-Done:
+DONE:
+7. Camera breaks on move + anims
+6. Audio Pass 1
 5. Main menu  continue game doesn't work after dying?
 4. Change monitor button -> Use Scott solution (button disappears when clicked, reappears after leaving zone)
 Foxy
@@ -26,7 +31,8 @@ Room Textures and Layout
 Monitor Controls
 Power Out (bit rough)
 Night end
-	
+
+
 Old:
 1. Camera panel button is touchy. 
 2. Enemy AI
